welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:5: error: '=' expected but identifier found.
def faire V() {
          ^PictureMono1:14: error: illegal start of simple expression
faire V() 
^