welcome.lessons.welcome.methods.picture.PictureMono1.scala.code
def Brosse() {
  baisseBrosse()
  leveBrosse()
}
def faire V() {
  avance() ; avance() ; Brosse()
  avance() ; gauche() ; avance() ; Brosse()
  recule()
  droite() ; avance() ; Brosse()
  avance() ; avance() ; gauche()
  
}

faire V()